--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
+    "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
     "node-schedule": "^2.1.1",
     "nodemon": "^3.1.7",
